[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui_elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/TitleWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui_elements/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://tres/fonts/Ubuntu32_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/itchio.png" type="Texture" id=5]
[ext_resource path="res://screens/BuyLauncher.gd" type="Script" id=6]
[ext_resource path="res://tres/fonts/Ubuntu24_Normal.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui_elements/BtnIconHelp.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui_elements/Panel.tscn" type="PackedScene" id=9]
[ext_resource path="res://tres/PanelHelpIcons.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/dpad_lr.png" type="Texture" id=11]

[node name="BuyLauncher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -19.0
margin_right = 184.0
margin_bottom = 125.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.5
margin_top = -314.5
margin_right = 476.5
margin_bottom = -37.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 953, 277 )
custom_fonts/font = ExtResource( 4 )
text = "BUYMSG"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -263.0
margin_top = -222.0
margin_right = 264.0
margin_bottom = -131.0
grow_horizontal = 2
custom_constants/separation = 72
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnBuy" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_right = 231.0
margin_bottom = 91.0
text = "BUYLAUNCHER"

[node name="BtnGoMainMenu" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 303.0
margin_right = 526.0
margin_bottom = 91.0
text = "BACKTOMENU"

[node name="PanelHelp" parent="." instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 0.0
margin_bottom = 0.0
custom_styles/panel = ExtResource( 10 )

[node name="Hbx" type="HBoxContainer" parent="PanelHelp"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1356.0
margin_bottom = 60.0
mouse_filter = 2
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelHelp/Hbx"]
margin_left = 494.0
margin_right = 630.0
margin_bottom = 50.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="BtnIconHelp" parent="PanelHelp/Hbx/HBoxContainer3" instance=ExtResource( 8 )]
margin_bottom = 50.0

[node name="Label" type="Label" parent="PanelHelp/Hbx/HBoxContainer3"]
margin_left = 58.0
margin_top = 11.0
margin_right = 136.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "SELECT"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LR" type="HBoxContainer" parent="PanelHelp/Hbx"]
margin_left = 680.0
margin_right = 851.0
margin_bottom = 50.0
custom_constants/separation = 6

[node name="Spr" type="TextureRect" parent="PanelHelp/Hbx/LR"]
margin_right = 55.0
margin_bottom = 50.0
rect_min_size = Vector2( 55, 30 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="PanelHelp/Hbx/LR"]
margin_left = 61.0
margin_top = 11.0
margin_right = 171.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "NAVIGATE"
align = 1
valign = 1

[node name="TitleWindow" parent="." instance=ExtResource( 2 )]
title = "BUYLAUNCHER"
btn_back_visible = false

[connection signal="pressed" from="HBoxContainer/BtnBuy" to="." method="_on_BtnBuy_pressed"]
[connection signal="pressed" from="HBoxContainer/BtnGoMainMenu" to="." method="_on_BtnGoMainMenu_pressed"]
